@@ -1,3 +1,7 @@
+## [Unreleased]
+### Added
+- Added the trait `SparsableTrait` to serde_json::Value
+
 ## [0.1.1] - 2021-01-20
 ### Added
 - Support for `Option<T>`
